--- a/stock_reserve_sale/test/sale_reserve.yml
+++ b/stock_reserve_sale/test/sale_reserve.yml
@@ -6,7 +6,7 @@
     # Travis, the hook performing this operation for the new stock reservation
     # location is run after the test execution. This causes the stock level
     # computation to be wrong at the time the tests are run.
-    self._parent_store_compute(cr)
+    self._parent_store_compute()
 -
   I create a product to test the stock reservation
 -
@@ -14,15 +14,13 @@
     default_code: 001GELATO
     name: Gelato
     type: product
-    categ_id: product.product_category_1
+    categ_id: product.product_category_all
     list_price: 100.0
     standard_price: 70.0
     uom_id: product.product_uom_kgm
     uom_po_id: product.product_uom_kgm
     valuation: real_time
     cost_method: average
-    property_stock_account_input: account.o_expense
-    property_stock_account_output: account.o_income
 -
   I update the current stock of the Gelato with 10 kgm
 -
@@ -31,14 +29,13 @@
     product_id: product_gelato
 -
   !python {model: stock.change.product.qty}: |
-    context['active_id'] = ref('product_gelato')
-    self.change_product_qty(cr, uid, [ref('change_qty')], context=context)
+    self.browse(ref('change_qty')).change_product_qty()
 -
   In order to test reservation of the sales order, I create a sales order
 -
   !record {model: sale.order, id: sale_reserve_01}:
     partner_id: base.res_partner_2
-    payment_term: account.account_payment_term
+    payment_term_id: account.account_payment_term
     order_line:
       - product_id: product_gelato
         product_uom_qty: 4
@@ -49,25 +46,23 @@
 -
   !python {model: sale.stock.reserve}: |
     active_id = ref('sale_reserve_01')
-    context['active_id'] = active_id
-    context['active_ids'] = [active_id]
-    context['active_model'] = 'sale.order'
-    wizard_id = self.create(cr, uid, {}, context=context)
-    self.button_reserve(cr, uid, [wizard_id], context=context)
+    wizard_id = self.with_context(
+      active_id=active_id,
+      active_ids=[active_id],
+      active_model='sale.order').create({})
+    wizard_id.button_reserve()
 -
   I check Virtual stock of Gelato after update reservation
 -
   !python {model: product.product, id: product_gelato}: |
-    from nose.tools import *
-    assert_almost_equal(self.virtual_available, 5.0)
+    assert self.virtual_available == 5.0
 -
   I release the sales order's reservations
 -
   !python {model: sale.order}: |
-    self.release_all_stock_reservation(cr, uid, [ref('sale_reserve_01')], context=context)
+    self.browse(ref('sale_reserve_01')).release_all_stock_reservation()
 -
   I check Virtual stock of Gelato after release of reservations
 -
   !python {model: product.product, id: product_gelato}: |
-    from nose.tools import *
-    assert_almost_equal(self.virtual_available, 10.0)
+    assert self.virtual_available == 10.0
